fix: comment India

--- a/rapid_api_test.ipynb
+++ b/rapid_api_test.ipynb
@@ -194,7 +194,7 @@
     }
    ],
    "source": [
-    "# Searching general news in Australia\n",
+    "# Searching general news in India\n",
     "url = \"https://newscatcher.p.rapidapi.com/v1/latest_headlines\"\n",
     "\n",
     "querystring = {\"topic\":\"news\",\"lang\":\"en\",\"country\":\"in\",\"media\":\"True\"}\n",
