fix: move function to lower cell

--- a/scrape.ipynb
+++ b/scrape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "source": [
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
@@ -21,19 +21,6 @@
     "    # print(st_divs)\n",
     "    for st_div in st_divs:\n",
     "        news_summaries.append(st_div.text)\n",
-    "    return news_summaries\n",
-    "\n",
-    "def scrape_travel_summaries(s):\n",
-    "    time.sleep(randint(0, 2))  # relax and don't let them know\n",
-    "    r = requests.get(\"https://www.stuff.co.nz/\"+s)\n",
-    "    print(r.status_code)  # Print the status code\n",
-    "    content = r.text\n",
-    "    news_summaries = []\n",
-    "    soup = BeautifulSoup(content, \"html.parser\")\n",
-    "    st_divs = soup.findAll(\"div\", {\"class\": \"content no-intro\"})\n",
-    "    # print(st_divs)\n",
-    "    for st_div in st_divs:\n",
-    "        news_summaries.append(st_div.text)\n",
     "    return news_summaries"
    ],
    "outputs": [],
@@ -41,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "source": [
     "l = scrape_sports_summaries(\"sport\")\n",
     "for n in l:\n",
@@ -53,6 +40,29 @@
      "name": "stdout",
      "text": [
       "200\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "    \n",
+      "        All Blacks plan on Sam Cane missing entire Rugby Championship\n",
+      "    \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "6 min ago \n",
+      "\n",
+      "                    Ardie Savea set for extended stint at No 7 as Ian Foster doesn't see his captain making a return within the next couple of months.\n",
+      "                \n",
+      "\n",
+      "\n",
       "\n",
       "\n",
       "\n",
@@ -73,28 +83,6 @@
       "3:46 PM \n",
       "\n",
       "                    Richie Mo'unga given \"the points\" at this stage of the intriguing ABs No 10 battle, which gets him the nod to start in Hamilton.\n",
-      "                \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "    \n",
-      "        Ardie Savea to start at No 7 for All Blacks against Fiji\n",
-      "    \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "                    Ardie Savea is back at openside flanker as Ian Foster names an experienced side for second test in Hamilton.\n",
       "                \n",
       "\n",
       "\n",
@@ -171,8 +159,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "source": [
+    "def scrape_travel_summaries(s):\n",
+    "    time.sleep(randint(0, 2))  # relax and don't let them know\n",
+    "    r = requests.get(\"https://www.stuff.co.nz/\"+s)\n",
+    "    print(r.status_code)  # Print the status code\n",
+    "    content = r.text\n",
+    "    news_summaries = []\n",
+    "    soup = BeautifulSoup(content, \"html.parser\")\n",
+    "    st_divs = soup.findAll(\"div\", {\"class\": \"content no-intro\"})\n",
+    "    # print(st_divs)\n",
+    "    for st_div in st_divs:\n",
+    "        news_summaries.append(st_div.text)\n",
+    "    return news_summaries\n",
+    "\n",
     "l = scrape_travel_summaries(\"travel\")\n",
     "for n in l:\n",
     "    print(n)"
@@ -182,7 +183,31 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "200\n"
+      "200\n",
+      "Food & wine holidaysNZ's best small town bakeries: The pie stops we missed\n",
+      "\n",
+      "AustraliaInside Australia's infamous, abandoned ghost zoo\n",
+      "\n",
+      "Food & wine holidaysOur state pieways: NZ's best small town bakeries to stop at\n",
+      "\n",
+      "Climate ChangeThis is the world's longest solar bicycle path\n",
+      "\n",
+      "Central Otago/LakesThe Australian families trading lockdowns for NZ's ski fields\n",
+      "\n",
+      "Central Otago/LakesIs this New Zealand's coolest coffee shop?\n",
+      "\n",
+      "Taranaki24-hour guide to New Plymouth\n",
+      "\n",
+      "WellingtonWhy every foodie should plan a trip to Wellington in August\n",
+      "\n",
+      "TaupōDreams, disasters and a Lake Taupō love story\n",
+      "\n",
+      "Climate ChangeThis is the world's longest solar bicycle path\n",
+      "\n",
+      "BusinessElectric aircraft on the horizon for regional routes\n",
+      "\n",
+      "Climate ChangeSocial housing complex residents to get shared electric bikes and cars\n",
+      "\n"
      ]
     }
    ],
